--- a/ourteam.html
+++ b/ourteam.html
@@ -10,7 +10,7 @@
   <meta name="keyword"
     content="Shaids-Dmce" />
   <meta name="author" content="Yash Bhangale" />
-  <title>About Us-CodeINBlogs</title>
+  <title> Shaids-Dmce</title>
   <link rel="stylesheet" href="./style/about.css" />
   <link rel="stylesheet" href="./style/style.css" />
   <link rel="stylesheet" href="./style/output.css" />
@@ -46,7 +46,7 @@ cursor.style.top = event.clientY + 'px';
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
 
       <!-- <a href="#" class="flex items-center"> --><a href="./index.html">
-      <img src="./assests/logo/logo.PNG" class="h-16 mr-3" alt="CodeInBlog" /></a>
+      <img src="./assests/logo/logo.PNG" class="h-16 mr-3" alt="Shaids-Dmce" /></a>
 
       <!-- </a> -->
       <!-- Mobile navbar -->
@@ -76,10 +76,6 @@ cursor.style.top = event.clientY + 'px';
               Us</a>
           </li>
           <li>
-            <a href="#"
-              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Blog</a>
-          </li>
-          <li>
             <a href="./events.html"
               class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Events</a>
           </li>
@@ -87,7 +83,7 @@ cursor.style.top = event.clientY + 'px';
             <a href="./index.html#Team"
               class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Team</a>
           </li>
-          <li>
+          <!-- <li>
             <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar"
               class="flex items-center justify-between w-full py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-blue-500 dark:focus:text-white dark:border-gray-700 dark:hover:bg-gray-700 md:dark:hover:bg-transparent">
               Topics
@@ -98,7 +94,6 @@ cursor.style.top = event.clientY + 'px';
                   clip-rule="evenodd"></path>
               </svg>
             </button>
-            <!-- Dropdown menu -->
             <div id="dropdownNavbar"
               class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
               <ul class="py-2 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
@@ -123,7 +118,7 @@ cursor.style.top = event.clientY + 'px';
                 </li>
               </ul>
             </div>
-          </li>
+          </li> -->
           <li>
             <a href="./contact.html"
               class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact
@@ -634,9 +629,6 @@ cursor.style.top = event.clientY + 'px';
               class="text-gray-600 transition-colors duration-300 dark:text-gray-300 dark:hover:text-blue-400 hover:underline hover:text-blue-500">Home</a>
             <a href="#Blog"
               class="text-gray-600 transition-colors duration-300 dark:text-gray-300 dark:hover:text-blue-400 hover:underline hover:text-blue-500">Blog</a>
-            <a href="./publish.hhhh"
-              class="text-gray-600 transition-colors duration-300 dark:text-gray-300 dark:hover:text-blue-400 hover:underline hover:text-blue-500">Publish
-              Article</a>
           </div>
         </div>
 
